# Courseproject-Modeling-road-traffic

./: .gitignore  .gitignore.swp  .swp  CMakeLists.txt  Makefile  README.md  demo.mdl  gui  main.cpp  test.mdl
.cmake/api/v1/reply/: cache-v2-ace410a4d69d14d0b8d3.json  cmakeFiles-v1-b6727ec1c64b92d3286a.json  codemodel-v2-dec158ec00e5f1153434.json  index-2020-11-30T09-07-22-0179.json  target-gui-Debug-c61262f36de183fec440.json  target-gui_autogen-Debug-401f33eb5004dac7a3d1.json  target-main-Debug-9cd1a48954353e1c2fb1.json
OPENGL/: CMakeCache.txt  CMakeLists.txt  Car.cpp  Car.h  IndexBuffer.cpp  Makefile  Renderer.cpp  Renderer.h  Road.cpp  Road.h  Shader.cpp  Shader.h  Vector.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  cmake_install.cmake  debug.cpp  imgui.ini  test  test.cpp
OPENGL/src/: Car.cpp  Car.h  CarGenerator.cpp  CarGenerator.h  CarRegistry.cpp  CarRegistry.h  IndexBuffer.h  Particle.h  Renderer.cpp  Road.cpp  Road.h  Shader.h  Texture.cpp  Vector.cpp  Vector.h  VertexArray.cpp  VertexBuffer.h  debug.h  test  test.cpp
QtApp/: CMakeLists.txt  Item.cpp  Item.h  Mainwindow.cpp  Mainwindow.h  Makefile  QtApp  Workspace.cpp  Workspace.h  WorkspaceScene.cpp  WorkspaceScene.h  main.cpp  mainwindow.cpp  mainwindow.h
QtApp/.cmake/api/v1/reply/: cache-v2-2f0da2c96b74579d4f32.json  cmakeFiles-v1-d9688cbd685aa0cf4f33.json  codemodel-v2-9ac867042f40277c4f1d.json  index-2020-11-25T09-10-40-0153.json  target-QtApp-Debug-8531467417f12069d28a.json  target-QtApp_autogen-Debug-6099dc43c9e20cebc901.json
courseproject/: Car.cpp  Car.h  Road.cpp  Vector.cpp  Vector.h
gui_autogen/: mocs_compilation.cpp
gui_autogen/4RRI3FOHP7/: moc_Mainwindow.cpp  moc_Workspace.cpp  moc_WorkspaceScene.cpp
lib/: libGLEW.so.2.1.0
res/shaders/: car.shader  main.shader  road.shader  tr.shader
src/: MDLParser.cpp  MDLParser.h  ModelApplication.cpp  ModelApplication.h  OpenglLayer.cpp  OpenglLayer.h  Window.cpp  Window.h  main.cpp  pch.h
src/core/: BrakeForceGenerator.cpp  BrakeForceGenerator.h  Car.cpp  Car.h  CarGenerator.cpp  CarGenerator.h  CarRegistry.cpp  CarRegistry.h  ForceGenerator.cpp  ForceGenerator.h  MDLParser.cpp  MDLParser.h  Particle.cpp  Particle.h  Road.cpp  Road.h  RoadRegistry.cpp  RoadRegistry.h  SteerForceGenerator.cpp  SteerForceGenerator.h  TrafficLight.h  Vector.cpp  Vector.h
src/glfw/: Window.cpp  Window.h
src/gui/: Item.cpp  Item.h  ItemWindow.cpp  ItemWindow.h  Mainwindow.cpp  Mainwindow.h  TrafficlightWindow.cpp  TrafficlightWindow.h  Workspace.cpp  Workspace.h  WorkspaceScene.cpp  WorkspaceScene.cpp.autosave  WorkspaceScene.h  main.cpp
src/imgui/: ImguiLayer.cpp
src/model/: ModelApplication.cpp  ModelApplication.h  OpenglLayer.cpp  OpenglLayer.h
src/model/core/: Car.cpp  Car.h  ForceGenerator.cpp  ForceGenerator.h  MDLParser.cpp  MDLParser.h  Particle.cpp  Particle.h  Road.cpp  Road.h  TrafficLight.cpp  TrafficLight.h  Vector.cpp  Vector.h
src/model/glfw/: Window.cpp  Window.h
src/opengl/: IndexBuffer.cpp  OrtographicCamera.cpp  OrtographicCamera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
translations/: russian.qm  russian.ts
